# Ab_Programacion

./: .gitignore  Ab_Programacion.cpp  Ab_Programacion.h  CMakeLists.txt  Citamedica.cpp  Medico.hpp  Paciente.cpp  Paciente.hpp  README.md  clase 8.10.cpp  clases.cpp  main.cpp
SistemaHospitalario/: main.cpp
SistemaHospitalario/include/: Citamedica.hpp  DataManager.hpp  Medico.hpp  Paciente.hpp
SistemaHospitalario/src/: Citamedica.cpp  DataManager.cpp  Medico.cpp  Paciente.cpp  main.cpp
